objects/Finite_State_Machine_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Parent_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Configuration</label>
        <referenceTo>Finite_State_Machine_Configuration__c</referenceTo>
        <relationshipLabel>Finite State Machine Configurations</relationshipLabel>
        <relationshipName>Finite_State_Machine_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pushdown_Automata_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pushdown Automata Configuration</label>
        <referenceTo>Pushdown_Automata_Configuration__c</referenceTo>
        <relationshipLabel>Finite State Machine Configurations</relationshipLabel>
        <relationshipName>Finite_State_Machine_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Turing_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Turing Configuration</label>
        <referenceTo>Turing_Configuration__c</referenceTo>
        <relationshipLabel>Finite State Machine Configurations</relationshipLabel>
        <relationshipName>Finite_State_Machine_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Finite State Machine Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FSM-{0000}</displayFormat>
        <label>Finite State Machine Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finite State Machine Configurations</pluralLabel>
    <recordTypes>
        <fullName>Deterministic_Finite_State_Machine</fullName>
        <active>true</active>
        <label>Deterministic Finite State Machine</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Deterministic_Finite_State_Machine</fullName>
        <active>true</active>
        <label>Non-Deterministic Finite State Machine</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>